Publish page-1 index

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <link href="/favicon.ico" rel="shortcut icon" type="image/x-icon">
     <link href="/apple-touch-icon-precomposed.png" rel="apple-touch-icon">
 
-    <link rel="stylesheet" type="text/css" href="//alessandrostone.github.io/themes/uno/assets/css/uno.css?v=1469829197769" />
+    <link rel="stylesheet" type="text/css" href="//alessandrostone.github.io/themes/uno/assets/css/uno.css?v=1509820185080" />
 
     <link rel="canonical" href="https://alessandrostone.github.io/" />
     <meta name="referrer" content="origin" />
@@ -62,7 +62,7 @@ null
             <a href="https://alessandrostone.github.io" title="link to homepage for Alessandro Stone Aresta Blog"><img src="https://avatars.io/twitter/alexanderstone" width="80" alt="Alessandro Stone Aresta Blog logo" class="panel-cover__logo logo" /></a>
             <h1 class="panel-cover__title panel-title"><a href="https://alessandrostone.github.io" title="link to homepage for Alessandro Stone Aresta Blog">Alessandro Stone Aresta Blog</a></h1>
             <hr class="panel-cover__divider" />
-            <p class="panel-cover__description">bla bla bla ... and code</p>
+            <p class="panel-cover__description">0...1</p>
             <hr class="panel-cover__divider panel-cover__divider--secondary" />
     
             <div class="navigation-wrapper">
@@ -147,7 +147,7 @@ null
   </div>
 
             <footer class="footer">
-                <span class="footer__copyright">&copy; 2016. All rights reserved.</span>
+                <span class="footer__copyright">&copy; 2017. All rights reserved.</span>
                 <span class="footer__copyright"><a href="http://uno.daleanthony.com" title="link to page for Uno Ghost theme">Uno theme</a> by <a href="http://daleanthony.com" title="link to website for Dale-Anthony">Dale-Anthony</a></span>
                 <span class="footer__copyright">Proudly published with <a href="http://hubpress.io" title="link to Hubpress website">Hubpress</a></span>
             </footer>
@@ -167,7 +167,7 @@ null
         hljs.initHighlightingOnLoad();
       </script>
 
-    <script type="text/javascript" src="//alessandrostone.github.io/themes/uno/assets/js/main.js?v=1469829197769"></script>
+    <script type="text/javascript" src="//alessandrostone.github.io/themes/uno/assets/js/main.js?v=1509820185080"></script>
     
 
 </body>
